force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>sObject used for the OpenAPI flow. This is not supposed to be stored in the SAlesforce Database, so no tabs, page layouts, or security configuration is required</description>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>