force-app/main/default/objects/Employee__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>