force-app/main/default/objects/Employee__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Employees</fullName>
            </value>
            <value>
                <fullName>Get Employee By ID</fullName>
            </value>
            <value>
                <fullName>Add Employee</fullName>
            </value>
            <value>
                <fullName>Update Employee</fullName>
            </value>
            <value>
                <fullName>Delete Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>